# FSM.io

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
include/: FSM_builder.hpp  FSM_elements.hpp  app.hpp  matrix.hpp  model.hpp  observer.hpp  parser.hpp  ranges_helpers.hpp  test.hpp  transition_matrix.hpp  tree.hpp  type_aliases.hpp  utility.hpp
resources/: FSM_template.sv  decoded_test.xml  discord.drawio  expression_predicate_test.drawio  one_decision.drawio  one_state.drawio  one_state_arrow  one_state_empty  state_to_state.drawio  test.drawio  test.xml  test_2.drawio  test_2.xml  test_3.drawio  test_4.drawio  test_5.drawio
resources/fsm/: FSM_template.sv  nest_state_template.sv  readme.drawio  state_register_template.sv  state_template.sv
src/: FSM_builder.cpp  app.cpp  main.cpp  model.cpp  parser.cpp  test.cpp  transition_matrix.cpp
